<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/setup_wizard_relay"
    android:background="@drawable/img_desktop_bg3"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="25dp"
        android:paddingRight="100dp" >

        <Button
            android:id="@+id/btn_setup_wizard_welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:background="@drawable/button_back" />

        <Button
            android:id="@+id/btn_setup_wizard_welcome_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_toRightOf="@+id/btn_setup_wizard_welcome_back"
            android:background="@drawable/button_next" >

            <requestFocus />
        </Button>
        
               <Button
            android:id="@+id/btn_setup_wizard_welcome_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/btn_setup_wizard_welcome_next"
            android:background="@drawable/button_close" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="105dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="135dp"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:weightSum="2" >

        <LinearLayout
            android:id="@+id/left_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.38"
            android:padding="10dp"
            android:background="@color/custom_color"
            android:clickable="false"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_welcome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:gravity="right"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/divider_horizontal" />

            <TextView
                android:id="@+id/txt_lang_input"
                android:layout_width="fill_parent"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/language_input"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/divider_horizontal" />

            <TextView
                android:id="@+id/txt_net_settings"
                android:layout_width="fill_parent"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/network_settings"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/divider_horizontal" />

            <TextView
                android:id="@+id/txt_acnts_sync"
                android:layout_width="fill_parent"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/accounts_synchronization"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/divider_horizontal" />

            <TextView
                android:id="@+id/txt_date_time"
                android:layout_width="fill_parent"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/date_time"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/divider_horizontal" />

            <TextView
                android:id="@+id/txt_display"
                android:layout_width="fill_parent"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:text="@string/display"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/divider_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.62"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:background="@color/custom_color"
            android:clickable="false"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/right_inflate_layout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="false"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="26sp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:textSize="26sp"
                    android:text="@string/thank_you_for_choosing_a_ovion_product_"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_take_a_moment_to"
                    android:textSize="26sp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="26sp"
                        android:text="@string/click_"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="26sp"
                        android:text="@string/next"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/cyan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="26sp"
                        android:text="@string/_to_get_started_"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_logo_medium" />

</RelativeLayout>